<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/myConstraintLayout">

<!--    <Button-->
<!--        android:id="@+id/button_connect"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:inputType="textCapSentences"-->
<!--        android:onClick="openBluetooth"-->
<!--        android:text="@string/connect_bluetooth"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
    <LinearLayout
        android:id="@+id/connect_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/connected_device">

        <Button
            android:id="@+id/button_getMAC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:inputType="textCapSentences"
            android:onClick="openBluetoothLE"
            android:text="@string/get_device_mac"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_connect_ble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="textCapSentences"
            android:onClick="openBluetoothLE"
            android:text="@string/connect_ble"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="1"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/connected_device"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connect_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connected_device"
            android:textSize="20sp" />

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/device_name"-->
<!--                android:layout_marginLeft="8dp"-->
<!--                android:textSize="18sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/device_name"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textSize="18sp"/>-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_mac"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/device_mac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/command_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/connected_device"
        app:layout_constraintBottom_toTopOf="@id/frame_terminal">

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:inputType="textCapSentences"
            android:onClick="openBluetoothLE"
            android:text="Start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="textCapSentences"
            android:onClick="openBluetoothLE"
            android:text="End"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_terminal"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/command_layout" />

<!--    <fragment-->
<!--        android:name="com.example.sdp_app.TerminalFragment"-->
<!--        android:id="@+id/terminalFrag"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="550dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/connected_device" />-->


<!--    <RelativeLayout-->
<!--        android:id="@+id/fragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="450dp" />-->
<!--    <TextView-->
<!--        android:id="@+id/receive_text"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="475dp"-->
<!--        android:layout_weight="1"-->
<!--        android:freezesText="true"-->
<!--        android:gravity="bottom"-->
<!--        android:scrollbars="vertical"-->
<!--        android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
<!--        app:layout_constraintTop_toBottomOf="@id/connected_device" />-->

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="475dp"-->
<!--        android:background="?android:attr/listDivider"-->
<!--        app:layout_constraintTop_toBottomOf="@id/connected_device" />-->

<!--    <EditText-->
<!--        android:id="@+id/bluetooth_message"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:hint="@string/message_hint"-->
<!--        android:inputType="text|textNoSuggestions"-->
<!--        android:singleLine="true"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/button_send"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/receive_text" />-->


<!--    <Button-->
<!--        android:id="@+id/button_send"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:text="@string/send_message"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/bluetooth_message" />-->


</androidx.constraintlayout.widget.ConstraintLayout>